2012-01-16  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub (quotient remainder modulo): modified to raise an
	&assertion when divisor was 0.

2012-01-14  Takashi Kato  <ktakashi@ymail.com>

	* ext/crypto/random.c (Sg_MakePseudoRandom): separated pseudo random and
	secure random

2012-01-11  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (include include-ci): implemented include related
	syntax.

2012-01-05  Takashi Kato  <ktakashi@ymail.com>

	* src/extlib.stub (weak-vector): supported weak vector.

	* boot/compiler.scm (cond-expand): added builtin cond-expand.

	* README.md: changed to Markdown format.

2012-01-04  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub (list->string): it accepted non list object and
	returned empty string.

	* R7RS: added first support for R7RS libraries and syntax.

	* boot/compiler.scm (case): adjusted case to R7RS '=> keyword.

2012-01-03  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/shorten.scm (shorten): Added (shorten)library.

	* src/hashtable.c (equal-hash): Fixed non stop problem when given object
	contains too many shared objects.

2011-12-30  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/sagittarius/control.scm (define-with-key):
	rewrite define-with-key.

2011-12-29  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/sagittarius/reader.scm (sagittarius reader):
	added reader macro library.

2011-11-23  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub (*.): fixed returning always 0.0.

	* boot/compiler.scm (pass1/scan-inlinable): fixed mis marking for
	constable and inlinable.

2011-11-15  Takashi Kato  <ktakashi@ymail.com>

	* src/charset.c :
	[Issue 4] Added builtin charset.

	* src/treemap.c, src/rbtree.c :
	[Issue 3] Added treemap interface and implementation.

2011-11-13  Takashi Kato  <ktakashi@ymail.com>

	* src/library.c (Sg_ImportLibraryFullSpec):
	[Issue 2] Fixed rename export.

2011-11-11  Takashi Kato  <ktakashi@ymail.com>

	* started Version 0.2.3.
